--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     //
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
     implementation 'com.facebook.android:facebook-login:latest.release'
+
+    //roudedimageView
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
