--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.AppBanHang"
         tools:targetApi="31">
         <activity
-            android:name=".PlacedOrderActivity"
+            android:name=".activity.PlacedOrderActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
